Move compiler plugin to analyze phase